k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: repo-scrapper-backend
  namespace: repo-scrapper
  labels:
    app: repo-scrapper
spec:
  replicas: 2
  selector:
    matchLabels:
      app: repo-scrapper
  template:
    metadata:
      labels:
        app: repo-scrapper
    spec:
      imagePullSecrets:
        - name: acr-secret   # ACR Private Image Auth Secret
      containers:
      - name: backend
        image: reposcrapperreg2026.azurecr.io/repo-scrapper-backend:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
